--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,7 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>This Is Brazil - Loja Patriota Oficial</title>
+    <link rel="icon" type="image/png" href="/favicon.ico.png" />
+
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
