--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>This Is Brazil - Loja Patriota Oficial</title>
-    <link rel="icon" type="image/png" href="/favicon.ico.png" />
+    <link rel="icon" type="image/png" href="/logo.png" />
 
 
   </head>
